*******************************************************************************
Version 1.6.10
*******************************************************************************

2010-11-07 Stefan Sommerfeld <zerocom(at)cs.tu-berlin.de>

	Several patches for windows compatibility and fixing warnings.

2010-11-07 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	PTHREAD_MUTEX_RECURSIVE on DragonFly is an enum.

	SF Bug Tracker - ID: 3104527
	Submitted: OBATA Akio ( obache ) - 2010-11-07 07:10:28 BRST

	In threadutil/inc/ithread.h, it is expected that
	PTHREAD_MUTEX_RECURSIVE is defined as macro. But on DragonFly BSD,
	it is defined as enum, so not works as expected.

	Attachment patch treat that DragonFly BSD always
	have PTHREAD_MUTEX_RECURSIVE.

2010-11-07 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	ftime(3) in -lcompat should not be checked.

	SF Bug Tracker - ID: 3104521
	Submitted: OBATA Akio ( obache ) - 2010-11-07 07:03:44 BRST

	In configure.ac
	AC_CHECK_FUNCS(ftime,, [AC_CHECK_LIB(compat, ftime)])

	But since version 1.6.3, ftime(3) is not used, so it should be
	removed, or introduce unwanted linkage with -lcompat.

*******************************************************************************
Version 1.6.9
*******************************************************************************

2010-11-06 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Fix for bug introduced in samples code in svn revision 502, commit
	git:25c908c558c8e60eb386c155a6b93add447ffec0

	Sample device and combo were aborting with the message:
	"***** SampleUtil_Initialize was called multiple times!"

2010-11-06 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Make multiple SSDP advertisements faster.

	Put the loop to send multiple copies of each SSDP advertisements in
	ssdp_server.c instead of ssdp_device.c so we have only one call to
	imillisleep ( SSDP_PAUSE ) to speed up advertisements.
